--- a/inequality_input/inequalityinput.ui
+++ b/inequality_input/inequalityinput.ui
@@ -20,6 +20,9 @@
    <string>InequalityInput</string>
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout">
+   <property name="sizeConstraint">
+    <enum>QLayout::SetNoConstraint</enum>
+   </property>
    <property name="leftMargin">
     <number>0</number>
    </property>
