--- a/variable_input/variableinput.ui
+++ b/variable_input/variableinput.ui
@@ -20,6 +20,9 @@
    <string>VariableInput</string>
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout">
+   <property name="sizeConstraint">
+    <enum>QLayout::SetNoConstraint</enum>
+   </property>
    <property name="leftMargin">
     <number>0</number>
    </property>
@@ -50,6 +53,12 @@
         <verstretch>0</verstretch>
        </sizepolicy>
       </property>
+      <property name="minimumSize">
+       <size>
+        <width>50</width>
+        <height>0</height>
+       </size>
+      </property>
       <property name="cursor">
        <cursorShape>IBeamCursor</cursorShape>
       </property>
@@ -66,6 +75,12 @@
         <horstretch>1</horstretch>
         <verstretch>0</verstretch>
        </sizepolicy>
+      </property>
+      <property name="minimumSize">
+       <size>
+        <width>50</width>
+        <height>0</height>
+       </size>
       </property>
       <property name="cursor">
        <cursorShape>IBeamCursor</cursorShape>
@@ -87,6 +102,12 @@
         <verstretch>0</verstretch>
        </sizepolicy>
       </property>
+      <property name="minimumSize">
+       <size>
+        <width>50</width>
+        <height>0</height>
+       </size>
+      </property>
       <property name="cursor">
        <cursorShape>IBeamCursor</cursorShape>
       </property>
@@ -107,6 +128,12 @@
         <verstretch>0</verstretch>
        </sizepolicy>
       </property>
+      <property name="minimumSize">
+       <size>
+        <width>50</width>
+        <height>0</height>
+       </size>
+      </property>
       <property name="cursor">
        <cursorShape>IBeamCursor</cursorShape>
       </property>
@@ -126,6 +153,12 @@
         <horstretch>1</horstretch>
         <verstretch>0</verstretch>
        </sizepolicy>
+      </property>
+      <property name="minimumSize">
+       <size>
+        <width>50</width>
+        <height>0</height>
+       </size>
       </property>
       <property name="cursor">
        <cursorShape>IBeamCursor</cursorShape>
@@ -187,13 +220,13 @@
       </property>
       <property name="minimumSize">
        <size>
-        <width>200</width>
+        <width>100</width>
         <height>0</height>
        </size>
       </property>
       <property name="maximumSize">
        <size>
-        <width>200</width>
+        <width>16777215</width>
         <height>16777215</height>
        </size>
       </property>
