--- a/xml/bareminimumplotter.ui
+++ b/xml/bareminimumplotter.ui
@@ -154,7 +154,7 @@
                   <set>Qt::AlignCenter</set>
                  </property>
                 </widget>
-                <widget class="QWidget" name="">
+                <widget class="QWidget" name="layoutWidget">
                  <layout class="QHBoxLayout" name="horizontalLayout">
                   <item>
                    <widget class="QLabel" name="label_InequalityPlotOption">
@@ -935,7 +935,7 @@ p, li { white-space: pre-wrap; }
   <customwidget>
    <class>QCustomPlot</class>
    <extends>QWidget</extends>
-   <header>qcustomplot.h</header>
+   <header>lib/qcustomplot.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
