--- a/xml/bareminimumplotter.ui
+++ b/xml/bareminimumplotter.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>790</width>
-    <height>358</height>
+    <width>800</width>
+    <height>392</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -24,8 +24,8 @@
        <attribute name="title">
         <string>Input</string>
        </attribute>
-       <layout class="QVBoxLayout" name="verticalLayout_5">
-        <item>
+       <layout class="QGridLayout" name="gridLayout_4">
+        <item row="0" column="0">
          <widget class="QSplitter" name="splitter">
           <property name="orientation">
            <enum>Qt::Vertical</enum>
@@ -256,9 +256,9 @@
                   <property name="geometry">
                    <rect>
                     <x>0</x>
-                    <y>-3</y>
-                    <width>632</width>
-                    <height>60</height>
+                    <y>0</y>
+                    <width>642</width>
+                    <height>68</height>
                    </rect>
                   </property>
                   <property name="autoFillBackground">
@@ -746,8 +746,8 @@ background: transparent;
                    <rect>
                     <x>0</x>
                     <y>0</y>
-                    <width>632</width>
-                    <height>60</height>
+                    <width>642</width>
+                    <height>68</height>
                    </rect>
                   </property>
                   <property name="autoFillBackground">
@@ -844,7 +844,7 @@ p, li { white-space: pre-wrap; }
           </widget>
          </widget>
         </item>
-        <item>
+        <item row="1" column="0">
          <layout class="QHBoxLayout" name="layout_Progress">
           <property name="topMargin">
            <number>0</number>
@@ -923,8 +923,8 @@ p, li { white-space: pre-wrap; }
        <attribute name="title">
         <string>Plot</string>
        </attribute>
-       <layout class="QVBoxLayout" name="verticalLayout_6">
-        <item>
+       <layout class="QGridLayout" name="gridLayout_3">
+        <item row="0" column="0">
          <widget class="QCustomPlot" name="plotter" native="true">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
@@ -951,6 +951,80 @@ p, li { white-space: pre-wrap; }
         </item>
        </layout>
       </widget>
+      <widget class="QWidget" name="tab_settings">
+       <attribute name="title">
+        <string>Settings</string>
+       </attribute>
+       <layout class="QGridLayout" name="gridLayout">
+        <item row="0" column="0">
+         <widget class="QGroupBox" name="groupBox_SettingsCalculation">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="maximumSize">
+           <size>
+            <width>16777215</width>
+            <height>80</height>
+           </size>
+          </property>
+          <property name="title">
+           <string>Calculations</string>
+          </property>
+          <layout class="QFormLayout" name="formLayout">
+           <property name="formAlignment">
+            <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+           </property>
+           <item row="0" column="0">
+            <widget class="QLabel" name="label_SettingsTolerance">
+             <property name="text">
+              <string>Inequality Tolerance</string>
+             </property>
+            </widget>
+           </item>
+           <item row="0" column="1">
+            <widget class="QLineEdit" name="lineEdit_SettingsTolerance">
+             <property name="text">
+              <string>1E-5</string>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </widget>
+        </item>
+        <item row="0" column="1">
+         <spacer name="horizontalSpacer_3">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>40</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+        <item row="1" column="0">
+         <spacer name="verticalSpacer">
+          <property name="orientation">
+           <enum>Qt::Vertical</enum>
+          </property>
+          <property name="sizeType">
+           <enum>QSizePolicy::Expanding</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>20</width>
+            <height>40</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+       </layout>
+      </widget>
      </widget>
     </item>
    </layout>
@@ -960,7 +1034,7 @@ p, li { white-space: pre-wrap; }
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>790</width>
+     <width>800</width>
      <height>20</height>
     </rect>
    </property>
@@ -1056,7 +1130,15 @@ p, li { white-space: pre-wrap; }
   </customwidget>
  </customwidgets>
  <tabstops>
-  <tabstop>textEditError</tabstop>
+  <tabstop>tabWidget</tabstop>
+  <tabstop>scrollArea_InequalityInputs</tabstop>
+  <tabstop>scrollArea_VariableInputs</tabstop>
+  <tabstop>button_Plot</tabstop>
+  <tabstop>button_AddInequality</tabstop>
+  <tabstop>pushButton_AddInequalityLoader</tabstop>
+  <tabstop>button_AddVariable</tabstop>
+  <tabstop>pushButton</tabstop>
+  <tabstop>lineEdit_SettingsTolerance</tabstop>
  </tabstops>
  <resources/>
  <connections>
@@ -1064,7 +1146,7 @@ p, li { white-space: pre-wrap; }
    <sender>actionExit</sender>
    <signal>triggered()</signal>
    <receiver>BareMinimumPlotter</receiver>
-   <slot>quit()</slot>
+   <slot>menu_quit()</slot>
    <hints>
     <hint type="sourcelabel">
      <x>-1</x>
@@ -1146,6 +1228,6 @@ p, li { white-space: pre-wrap; }
   <slot>menu_open()</slot>
   <slot>menu_saveAs()</slot>
   <slot>menu_new()</slot>
-  <slot>quit()</slot>
+  <slot>menu_quit()</slot>
  </slots>
 </ui>
